# replace-homedir

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.centy/: .centy-manifest.json  README.md
.centy/issues/: README.md
.centy/issues/a34a68e1-ab5c-482a-bcab-c5fc4f673627/: issue.md  metadata.json
.centy/issues/b4acc682-2cdd-45a8-81f7-b04c1b45ea8d/: issue.md  metadata.json
.centy/issues/c87e5806-86cc-4bbe-b7a0-5795125468bd/: issue.md  metadata.json
.centy/issues/ca60f6b1-6a80-460f-94e2-bd4d4415391b/: issue.md  metadata.json
.centy/issues/e5b04cf2-d189-4af8-afa6-5d80b4eb7f3d/: issue.md  metadata.json
.claude/agents/: e2e-tester.md  lint-fixer.md
.claude/commands/tupe/: boot.md  commit-push.md  e2e-testing.md  implement-and-validate.md  lib-opportunities.md  lint.md  package-setup.md  project-onboard.md  ultrathink.md  use-case-testing.md  validate-feature.md
.github/workflows/: ci.yml
src/: lib.rs
